<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <TextView
        android:id="@+id/signUpLbl"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="632dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sign Up" />

    <ImageView
        android:id="@+id/logoImg3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="678dp"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/conformBtn"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="141dp"
        android:backgroundTint="#51C956"
        android:text="Confirm"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnToLogBtn4"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="663dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="#51C956"
        android:text="Return"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterEmailTf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:layout_marginBottom="534dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/email"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterUsernameTf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/repeatPassWordTf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="472dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPasswordTf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="314dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="411dp"
        android:ems="10"
        android:text="@string/repeatPassword"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>