<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInScreen">

    <ImageView
        android:id="@+id/logoImg6"
        android:layout_width="330dp"
        android:layout_height="155dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="57dp"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/emailTf2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/emailTf2"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="18dp"
        android:autofillHints="@string/prompt_email"
        android:backgroundTint="#1F4720"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/passwordTf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImg6" />

    <EditText
        android:id="@+id/passwordTf"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginBottom="22dp"
        android:autofillHints="@string/prompt_password"
        android:backgroundTint="#1F4720"
        android:drawableLeft="@drawable/baseline_password_24"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/emailTf2"
        app:layout_constraintStart_toStartOf="@+id/emailTf2"
        app:layout_constraintTop_toBottomOf="@+id/emailTf2" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="Log In"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/passwordTf" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginBottom="11dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordBtn"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordBtn"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_gravity="start"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#409143"
        android:enabled="true"
        android:text="Forgot Password?"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordTf"
        app:layout_constraintStart_toStartOf="@+id/passwordTf"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>